--- a/public/index.html
+++ b/public/index.html
@@ -22,25 +22,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
       
-  <title>vesti</title>
-  <!-- Start of wevesti Zendesk Widget script -->
-  <script
-    id="ze-snippet"
-    src="https://static.zdassets.com/ekr/snippet.js?key=a07ec48a-bacf-4b08-9d9d-2d8d4520b935"
-  >
-  // window.zESettings = {
-  //   webWidget: {
-  //     zIndex: 999999
-  //   }
-  // };
-</script> 
-<script src="https://static.novacredit.com/connect/v2/init.js"></script>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous">
-   </script>
-  <!-- End of wevesti Zendesk Widget script -->
+  <title> Elhay Cryptocurrency </title>
+ 
   <script type="text/javascript">   
     window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=document.createElement("script");r.type="text/javascript",r.async=!0,r.src="https://cdn.heapanalytics.com/js/heap-"+e+".js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(r,a);for(var n=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],o=0;o<p.length;o++)heap[p[o]]=n(p[o])};   
     heap.load(2893078265); 
