--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favi.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="vesti Web Application" />
+  <meta name="description" content="ElhayCrypto web application" />
   <link rel="apple-touch-icon" href="favi.svg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link
